feat(stories): open in stackblitz (#7147)
* feat(stories): open instackblitz

* fix(docs): style break in components

* fix(docs): key prop warning in doc

* fix(docs): licnese text added

* feat(stories): open in stackblitz

* feat(stories): dynamic props

* fix(fullpageerror): resolve avt check fail

---------

Co-authored-by: Anamika T S <anamika.t.s@ibm.com>

--- a/packages/ibm-products/src/components/FullPageError/FullPageError.mdx
+++ b/packages/ibm-products/src/components/FullPageError/FullPageError.mdx
@@ -2,6 +2,7 @@ import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink, stackblitzHref } from '../../global/js/utils/story-helper';
 import { FullPageError } from '.';
 import * as stories from './FullPageError.stories';
+import { stackblitzPrefillConfig } from '../../../previewer/codePreviewer';
 
 # FullPageError
 
@@ -22,50 +23,35 @@ Errors caused by server connectivity issues are not covered in this guideline.\
 The `UIShell` and `Breadcrumbs` (if applicable) should be implemented at the product
 level.
 
-## Example usage
-
-```jsx
-import { FullPageError } from "@carbon/ibm-products";
-import { Link } from "@carbon/react";
-
-export const Example = () => (
-  <FullPageError
-    kind="custom"
-    children={
-      <>
-        <Link href={"/"}>– Forwarding Link 1</Link>
-        <br />
-        <Link href={"/"}>– Forwarding Link 1</Link>
-      </>
-    }
-    title="[Error title]"
-    label="Error ###"
-    // cSpell:dictionaries lorem-ipsum
-    description="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."
-  />
-);
-
-export default Example;
-
-```
-
 ### Default
 
 The default error page can be used for full-page errors that are not 403 or 404
 errors, and not caused by server connectivity issues.
 
-<Canvas>
-  <Story of={stories.fullPageError} />
-</Canvas>
+<Canvas
+  of={stories.fullPageError}
+  additionalActions={[
+    {
+      title: 'Open in Stackblitz',
+      onClick: () => stackblitzPrefillConfig(stories.fullPageError, stories.fullPageError.args),
+    },
+  ]}
+/>
 
 ### 403 variant
 
 Display an Access Denied (403) error message when the user lacks permission to
 access the page or data, or when login is required.
 
-<Canvas>
-  <Story of={stories.fullPageError403} />
-</Canvas>
+<Canvas
+  of={stories.fullPageError403}
+  additionalActions={[
+    {
+      title: 'Open in Stackblitz',
+      onClick: () => stackblitzPrefillConfig(stories.fullPageError403, stories.fullPageError403.args),
+    },
+  ]}
+/>
 
 ### 404 variant
 
@@ -73,9 +59,15 @@ Show a Page Not Found (404) error message when the requested page cannot be
 located on the server, typically due to outdated bookmarks, mistyped URLs, or
 broken links.
 
-<Canvas>
-  <Story of={stories.fullPageError404} />
-</Canvas>
+<Canvas
+  of={stories.fullPageError404}
+  additionalActions={[
+    {
+      title: 'Open in Stackblitz',
+      onClick: () => stackblitzPrefillConfig(stories.fullPageError404, stories.fullPageError404.args),
+    },
+  ]}
+/>
 
 ## Code sample
 
