feat: composable interstitial screen implementation

--- a/packages/ibm-products/src/components/InterstitialScreen/InterstitialScreen.mdx
+++ b/packages/ibm-products/src/components/InterstitialScreen/InterstitialScreen.mdx
@@ -1,4 +1,4 @@
-import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { InterstitialScreen } from '.';
 
@@ -11,7 +11,6 @@ import { InterstitialScreen } from '.';
 - [Overview](#overview)
 - [Expected Composability](#expected-composability)
 - [About Onboarding](#about-onboarding)
-- [Stackblitz example with Animated Media](#stackblitz-example-with-animated-media)
 - [Component API](#component-api)
 
 ## Overview
@@ -37,30 +36,40 @@ explain, educate, and cultivate novice users into high-functioning power users.
 ## Interstitial Screen Code sample
 
 ```jsx
-<InterstitialScreen
-  interstitialAriaLabel="Interstitial Example"
-  domainName="IBM"
-  hideProgressIndicator
+ <InterstitialScreen
   isOpen
-  nextButtonLabel="Next"
+  hideProgressIndicator
   onClose={function noRefCheck() {}}
-  previousButtonLabel="Back"
-  productName="Product"
-  skipButtonLabel="Skip"
-  startButtonLabel="Get started"
 >
-  <InterstitialScreenView className="NoImageExampleModal" stepTitle="Step 1">
-    <InterstitialScreenViewModule
-      description="Use case-specific content that explains the concept. Use case-specific content that explains the concept. Use case-specific content that explains the concept. Use case-specific content that explains the concept."
-      size="sm"
-      title="Use case-specific heading"
-    />
-  </InterstitialScreenView>
-</InterstitialScreen>
-```
-## Stackblitz example with Animated Media
-[![Example with Animated media](https://developer.stackblitz.com/img/open_in_stackblitz.svg)](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/examples/carbon-for-ibm-products/InterstitialScreenWithAnimatedMedia)
+  <InterstitialScreen.Header
+    headerTitle={'headerTitle'}
+    headerSubTitle={'headerSubTitle'}
+  ></InterstitialScreen.Header>
+  <InterstitialScreen.Body
+    contentRenderer={(internalConfig) => {
+      return (
+        <InterstitialScreenView
+          className="NoImageExampleModal"
+          stepTitle="Step 1"
+        >
+          <InterstitialScreenViewModule
+            description="Use case-specific content that explains the concept. Use case-specific content that explains the concept. Use case-specific content that explains the concept. Use case-specific content that explains the concept."
+            size="sm"
+            title="Use case-specific heading"
+          />
+        </InterstitialScreenView>
+      );
+    }}
+  />
+  <InterstitialScreen.Footer
+    nextButtonLabel="Next"
+    previousButtonLabel="Back"
+    skipButtonLabel="Skip"
+    startButtonLabel="Get started"
+  />
+</InterstitialScreen>;
 
+```
 
 ## Component API
 
