fix: generic clarification

--- a/packages/ibm-products/src/global/js/hooks/useOverflowItems/useOverflowItems.mdx
+++ b/packages/ibm-products/src/global/js/hooks/useOverflowItems/useOverflowItems.mdx
@@ -21,7 +21,7 @@ For example, if you need to display a certain number of `Tag` elements in a cont
 
 ```jsx
 // Hook arguments
-items: T[] = [], // An iterable list of items
+items: T[] = [], // A generic array of items
 containerRef: RefObject<HTMLElement | null>, // The parent container that the items are confined to
 offsetRef?: RefObject<HTMLElement | null>, // An optional ref to an element that you want to exclude from the calculation
 maxItems?: number, // An optional argument for a maximum amount of items to return
