--- a/packages/ibm-products/src/components/InterstitialScreen/InterstitialScreen.mdx
+++ b/packages/ibm-products/src/components/InterstitialScreen/InterstitialScreen.mdx
@@ -22,10 +22,11 @@ where a newly purchased capability is presented).
 
 ## Expected Composability
 
-Interstitial Screen was designed to be used with N number of
-**InterstitialScreenView** children. As a convenience, a provided
-**InterstitialScreenViewModule** is also available, although not required as a
-child of InterstitialScreenView.
+Interstitial screen is architetured as a compound component pattern in React with clearly defined sections: **Header, Body, and Footer**.
+InterstitialScreen acting as a container and **InterstitialScreen.Header, InterstitialScreen.Body, InterstitialScreen.Footer** 
+are static properties of the InterstitialScreen component, effectively acting as sub-components.All related parts of the screen (Header, Body, Footer) are 
+grouped under one logical component: InterstitialScreen.You can mix and match subcomponents or even omit some.
+
 
 ## About Onboarding
 
