--- a/packages/ibm-products/src/components/InterstitialScreen/InterstitialScreen.mdx
+++ b/packages/ibm-products/src/components/InterstitialScreen/InterstitialScreen.mdx
@@ -22,7 +22,7 @@ where a newly purchased capability is presented).
 
 ## Expected Composability
 
-Interstitial screen is architectured as a compound component pattern in React with clearly defined sections: **Header, Body, and Footer**.
+The InterstitialScreen component is structured using the compound component pattern in React, with distinct and well-defined sections: **Header, Body, and Footer**.
 InterstitialScreen acting as a container and **InterstitialScreen.Header, InterstitialScreen.Body, InterstitialScreen.Footer** 
 are static properties of the InterstitialScreen component, effectively acting as sub-components.All related parts of the screen (Header, Body, Footer) are 
 grouped under one logical component: InterstitialScreen.You can mix and match subcomponents or even omit some.
