--- a/packages/ibm-products/src/components/ConditionBuilder/ConditionBuilder.mdx
+++ b/packages/ibm-products/src/components/ConditionBuilder/ConditionBuilder.mdx
@@ -31,7 +31,7 @@ textarea, number, time, and date—as well as a custom type that allows users to
 For input types like text, textarea, number, date, and time, the component uses the corresponding Carbon components and supports standard Carbon props.
 
 The date range picker can be enabled when using the '`between`' operator or user preferred multiselect custom operator. 
-Eg: you can customise the date format and locale by setting `properties[i].config.dateFormat` and `properties[i].config.locale`, respectively.
+Eg: you can customize the date format and locale by setting `properties[i].config.dateFormat` and `properties[i].config.locale`, respectively.
 
 custom: Users can render a custom component by providing a `properties[i].config.component`, which should be a function that returns JSX. 
 This function receives `onChange` and `conditionState` as arguments. To update the condition builder’s state, users must call `onChange('value')` with the new value.
