feat(open in stackblitz): refactor previwer

--- a/packages/ibm-products/src/components/OptionsTile/OptionsTile.mdx
+++ b/packages/ibm-products/src/components/OptionsTile/OptionsTile.mdx
@@ -31,7 +31,7 @@ set of features with ease.
   additionalActions={[
       {
         title: 'Open in Stackblitz',
-        onClick: () => stackblitzPrefillConfig(stories.optionsTile, stories.default.component.displayName),
+        onClick: () => stackblitzPrefillConfig(stories.optionsTile),
       },
     ]}>
 </Canvas>
@@ -43,7 +43,7 @@ set of features with ease.
   additionalActions={[
       {
         title: 'Open in Stackblitz',
-        onClick: () => stackblitzPrefillConfig(stories.staticOptionsTile, stories.default.component.displayName),
+        onClick: () => stackblitzPrefillConfig(stories.staticOptionsTile),
       },
     ]}>
 </Canvas>
