fix: move summary and body to slots

--- a/packages/ibm-products-web-components/src/components/options-tile/options-tile.mdx
+++ b/packages/ibm-products-web-components/src/components/options-tile/options-tile.mdx
@@ -6,8 +6,24 @@ import * as OptionsTileStories from './options-tile.stories';
 
 # OptionsTile
 
+The OptionsTile component TODO
+
+## Getting started
+
+Here's a quick example to get you started.
+
+### JS (via import)
+
 ```javascript
 import '@carbon/ibm-products-web-components/es/components/options-tile/index.js';
+```
+
+
+### HTML
+
+```html
+<c4p-options-tile>
+</c4p-options-tile>
 ```
 
 ## `<c4p-options-tile>` attributes, properties and events
