feat(importmodal): style and doc updation

--- a/packages/ibm-products-web-components/src/components/import-modal/import-modal.mdx
+++ b/packages/ibm-products-web-components/src/components/import-modal/import-modal.mdx
@@ -6,9 +6,9 @@ import * as importModalStories from './import-modal.stories';
 
 # Import Modal
 
-The Import Modal pattern is made with carbon design system's web components,
+The import and upload pattern is used for transferring data or objects from an external source into a system.
 
-Note: This is not a component, and is only a recipe to build a Import Modal using carbon components meant to be scaled as per specific requirements.
+Patterns have multiple ways of accomplishing a user need and typically use a combination of components with additional design considerations. The pattern code we share is meant to serve as an example implementation that can be built and extended further.
 
 Ingredients used
 
