--- a/packages/ibm-products-web-components/src/components/import-modal/import-modal.mdx
+++ b/packages/ibm-products-web-components/src/components/import-modal/import-modal.mdx
@@ -10,11 +10,14 @@ The import and upload pattern is used for transferring data or objects from an e
 
 Patterns have multiple ways of accomplishing a user need and typically use a combination of components with additional design considerations. The pattern code we share is meant to serve as an example implementation that can be built and extended further.
 
-Ingredients used
+To build this pattern, we recommend including the following components:
 
-These are the ingredients used to generate the import modal
-cds-modal, cds-modal-header, cds-modal-body, cds-file-uploader, cds-file-uploader-drop-container, cds-form-item, cds-text-input, cds-button, cds-file-uploader-item, and cds-modal-footer. 
-All of these are used within a wrapper component to handle state management required for the import modal’s functionality.
+- [cds-modal](https://web-components.carbondesignsystem.com/?path=/docs/components-modal)
+- [cds-file-uploader](https://web-components.carbondesignsystem.com/?path=/docs/components-file-uploader)
+- [cds-text-input](https://web-components.carbondesignsystem.com/?path=/docs/components-text-input)
+- [cds-button](https://web-components.carbondesignsystem.com/?path=/docs/components-button)
+
+All of these carbon components are used within a wrapper component `import-modal` to handle state management required for the import modal’s functionality.
 
 > 💡 Check our
 > [Stackblitz](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/packages/ibm-products-web-components/examples/import-modal)
