--- a/packages/ibm-products-web-components/src/utilities/overflow-handler/overflow-handler.mdx
+++ b/packages/ibm-products-web-components/src/utilities/overflow-handler/overflow-handler.mdx
@@ -1,4 +1,4 @@
-import { ArgTypes, Markdown, Meta } from '@storybook/blocks';
+import { Meta } from '@storybook/blocks';
 import * as OverflowHandlerStories from './overflow-handler.stories';
 
 <Meta of={OverflowHandlerStories} />
