--- a/packages/ibm-products-web-components/src/patterns/delete/delete.mdx
+++ b/packages/ibm-products-web-components/src/patterns/delete/delete.mdx
@@ -1,14 +1,15 @@
-import { ArgTypes, Markdown, Meta } from '@storybook/blocks';
-import { Source } from '@storybook/addon-docs';
+import { Markdown, Meta, Story } from '@storybook/blocks';
+import { Canvas, Source } from '@storybook/addon-docs';
 
 import { cdnJs, cdnCss } from '../../globals/internal/storybook-cdn';
 import * as deleteStories from './delete.stories';
+
 
 <Meta of={deleteStories} />
 
 # Deletion pattern
 
-“Deletion” is an action that moves information from one location to another and is destructive.
+“Deletion” is an action that removes information from one location and is destructive.
 
 > 💡 Check our
 > [Stackblitz](https://stackblitz.com/github/szinta/ibm-products/tree/deletePattern/packages/ibm-products-web-components/examples/delete-pattern)
@@ -20,6 +21,14 @@ Patterns have multiple ways of accomplishing a user need and typically use a com
 
 To build this pattern, we recommend including the following components:
 - [cds-modal](https://web-components.carbondesignsystem.com/?path=/docs/components-modal)
+- [cds-text-input](https://web-components.carbondesignsystem.com/?path=/docs/components-text-input--overview)
+- [cds-toast-notification](https://web-components.carbondesignsystem.com/?path=/docs/components-notifications-toast--overview)
 
 
+## Example
 
+### High impact deletion
+
+<Canvas layout="fullscreen" >
+  <Story of={deleteStories.highImpactDeletion} />
+</Canvas>
