fix(deletePattern): unsupported decorator

--- a/packages/ibm-products-web-components/src/patterns/delete/delete.mdx
+++ b/packages/ibm-products-web-components/src/patterns/delete/delete.mdx
@@ -64,7 +64,7 @@ Requiring the user to confirm deletion is generally recommended. However, in low
   <Story of={deleteStories.lowImpactDeletion} />
 </Canvas>
 
-# Remove pattern
+### Remove pattern
 
 The medium and low impact 'Remove' patterns are similar to their corresponding 'Delete' patterns, with the only difference being the use of 'Remove' instead of 'Delete' in the text.
 
