update usage doc
Co-authored-by: elysia <elysia.hwang@gmail.com>

--- a/packages/ibm-products-web-components/src/patterns/delete/delete.mdx
+++ b/packages/ibm-products-web-components/src/patterns/delete/delete.mdx
@@ -66,6 +66,6 @@ Requiring the user to confirm deletion is generally recommended. However, in low
 
 ### Remove pattern
 
-The medium and low impact 'Remove' patterns are similar to their corresponding 'Delete' patterns, with the only difference being the use of 'Remove' instead of 'Delete' in the text.
+The medium and low-impact removal patterns are similar to their corresponding deletion patterns, with the only difference being the usage of “remove” or “delete“ in the text.
 
-'Remove' fits better when the action is reversible or not truly destructive. 
+Use “remove” when the action is reversible or not truly destructive. 
