--- a/packages/ibm-products-web-components/src/patterns/delete/delete.mdx
+++ b/packages/ibm-products-web-components/src/patterns/delete/delete.mdx
@@ -1,15 +1,15 @@
 import { Markdown, Meta, Story } from '@storybook/blocks';
-import { Canvas, Source } from '@storybook/addon-docs';
 
 import { cdnJs, cdnCss } from '../../globals/internal/storybook-cdn';
-import * as deleteStories from './delete.stories';
+import * as DeleteStories from './delete.stories';
 
-
-<Meta of={deleteStories} />
+<Meta of={DeleteStories} />
 
 # Delete and remove pattern
 
-“Removing” is an action that moves information from one location to another. Removal can be both destructive and non-destructive. “Deletion” is the most common type of removal and is destructive
+“Removing” is an action that moves information from one location to another.
+Removal can be both destructive and non-destructive. “Deletion” is the most
+common type of removal and is destructive
 
 > 💡 Check our
 > [Stackblitz](https://stackblitz.com/github/szinta/ibm-products/tree/deletePattern/packages/ibm-products-web-components/examples/delete-pattern)
@@ -17,55 +17,340 @@ import * as deleteStories from './delete.stories';
 
 [![Edit carbon-web-components](https://developer.stackblitz.com/img/open_in_stackblitz.svg)](https://stackblitz.com/github/szinta/ibm-products/tree/deletePattern/packages/ibm-products-web-components/examples/delete-pattern)
 
-Patterns have multiple ways of accomplishing a user need and typically use a combination of components with additional design considerations. The pattern code we share is meant to serve as an example implementation that can be built and extended further.
+Patterns have multiple ways of accomplishing a user need and typically use a
+combination of components with additional design considerations. The pattern
+code we share is meant to serve as an example implementation that can be built
+and extended further.
+
+#### Ingredients
 
 To build this pattern, we recommend including the following components:
+
 - [cds-modal](https://web-components.carbondesignsystem.com/?path=/docs/components-modal)
 - [cds-text-input](https://web-components.carbondesignsystem.com/?path=/docs/components-text-input--overview)
 - [cds-toast-notification](https://web-components.carbondesignsystem.com/?path=/docs/components-notifications-toast--overview)
 - [cds-button](https://web-components.carbondesignsystem.com/?path=/docs/components-button--overview)
 
-## Example
+## High impact deletion
 
-### High impact deletion
+A high-impact deletion cannot be reversed. The action would result in a
+significant loss for a user if done accidentally.
 
-A high-impact deletion cannot be reversed. The action would result in a significant loss for a user if done accidentally.
-
-When deleting is high-impact, a confirmation dialog should be presented to the user which displays:
+When deleting is high-impact, a confirmation dialog should be presented to the
+user which displays:
 
 - The name of the resource
 - Consequences of the deletion
 - This action cannot be undone.
 - An editable text field for the name of the resource to be entered
 
-For high-impact scenarios, a user should confirm the action by manually entering the name of the resource. The ‘Delete’ button is enabled when the text entered perfectly matches the resource name.
+For high-impact scenarios, a user should confirm the action by manually entering
+the name of the resource. The ‘Delete’ button is enabled when the text entered
+perfectly matches the resource name.
 
-<Canvas layout="fullscreen" >
-  <Story of={deleteStories.highImpactDeletion} />
-</Canvas>
+### Example
 
-### Medium impact deletion or removal
+Here's a quick example to get you started.
 
-A medium-impact deletion is one that cannot be reversed, but would not be catastrophic if done accidentally. When deleting is medium-impact, a confirmation dialog should be presented to the user which displays:
+All of the carbon web components listed under 'ingredients' section are used
+within a wrapper component `delete-pattern` to handle state management required
+for the functionality.
+
+#### TS
+
+```typescript
+import { html, css, LitElement } from 'lit';
+import { customElement, property, state } from 'lit/decorators.js';
+
+import '@carbon/web-components/es/components/modal/index.js';
+import '@carbon/web-components/es/components/form/form-item.js';
+import '@carbon/web-components/es/components/text-input/text-input.js';
+import '@carbon/web-components/es/components/notification/toast-notification.js';
+
+@customElement('delete-pattern')
+export class DeletePattern extends LitElement {
+  static styles = css`
+    :host cds-modal-body {
+      padding-bottom: 0;
+    }
+
+    .notification {
+      position: absolute;
+      right: 10px;
+      top: 10px;
+    }
+  `;
+
+  @property()
+  resourceName?: string;
+
+  @property({ reflect: true })
+  isOpen: boolean = false;
+
+  @state()
+  private _textInput: string = '';
+
+  @state()
+  private _enableDelete: boolean = false;
+
+  @state()
+  private _showNotification: boolean = false;
+
+  private _close() {
+    this.isOpen = false;
+    this._textInput = '';
+  }
+
+  private _onInputChange(e: Event) {
+    this._textInput = (e.target as HTMLInputElement).value;
+    this._enableDelete = this.resourceName === this._textInput;
+  }
+
+  private _onDelete(e: Event) {
+    this._close();
+    this._showNotification = true;
+  }
+
+  private onNotificationClose() {
+    this._showNotification = false;
+  }
+
+  render() {
+    return html`
+      <cds-modal size="sm" ?open="${this.isOpen}" prevent-close >
+        <cds-modal-header>
+          <cds-modal-close-button  @click="${this._close}" ></cds-modal-close-button>
+          <cds-modal-label>Delete ${this.resourceName} project</cds-modal-label>
+          <cds-modal-heading>Confirm delete</cds-modal-heading>
+        </cds-modal-header>
+        <cds-modal-body>
+          <cds-modal-body-content description>
+          Deleting '${this.resourceName}' project will permanently delete the project and all related configurations from the system.
+          This action cannot be undone.
+          </cds-modal-body-content>
+          <cds-form-item>
+            <cds-text-input
+              placeholder="Name of resource"
+              label="Type ${this.resourceName} to confirm"
+              value="${this._textInput}"
+              @input="${this._onInputChange}"
+              autocomplete="off"
+            >
+            </cds-text-input>
+          </cds-form-item>
+        </cds-modal-body>
+        <cds-modal-footer>
+          <cds-modal-footer-button kind="secondary" @click="${this._close}"
+            >Cancel</cds-modal-footer-button
+          >
+          <cds-modal-footer-button ?disabled="${!this._enableDelete}" kind="danger"  @click="${this._onDelete}"> Delete </cds-modal-footer-button>
+        </cds-modal-footer>
+      </cds-modal>
+
+      ${
+        this._showNotification
+          ? html`<cds-toast-notification
+              class="notification"
+              kind="success"
+              title="Successfully deleted project"
+              subtitle="${this.resourceName} project has been deleted"
+              caption="10:10:00 AM"
+              hide-close-button="true"
+              low-contrast="true"
+              timeout="3000"
+              @cds-notification-closed="${this.onNotificationClose}"
+            ></cds-toast-notification>`
+          : null
+      }
+      </cds-toast-notification>
+    `;
+  }
+}
+```
+
+## Medium impact deletion or removal
+
+A medium-impact deletion is one that cannot be reversed, but would not be
+catastrophic if done accidentally. When deleting is medium-impact, a
+confirmation dialog should be presented to the user which displays:
 
 - The name of the resource
 - Consequences of the deletion
 - The action cannot be undone.
- 
-<Canvas layout="fullscreen" >
-  <Story of={deleteStories.mediumImpactDeletion} />
-</Canvas>
 
-### Low impact deletion
+> NOTE: The medium-impact removal pattern is similar to medium-impact deletion
+> pattern, with the only difference being the usage of “remove” or “delete“ in
+> the text. Use “remove” when the action is reversible or not truly destructive.
 
-Requiring the user to confirm deletion is generally recommended. However, in low impact situations, or when an ‘undo’ option is available, user confirmation may not be required.
+### Example
 
-<Canvas layout="fullscreen" >
-  <Story of={deleteStories.lowImpactDeletion} />
-</Canvas>
+Here's a quick example to get you started.
 
-### Remove pattern
+All of the carbon web components listed under 'ingredients' section are used
+within a wrapper component `delete-pattern` to handle state management required
+for the functionality.
 
-The medium and low-impact removal patterns are similar to their corresponding deletion patterns, with the only difference being the usage of “remove” or “delete“ in the text.
+#### TS
 
-Use “remove” when the action is reversible or not truly destructive. 
+```typescript
+import { html, css, LitElement } from 'lit';
+import { customElement, property, state } from 'lit/decorators.js';
+
+import '@carbon/web-components/es/components/modal/index.js';
+import '@carbon/web-components/es/components/notification/toast-notification.js';
+
+@customElement('delete-pattern')
+export class DeletePattern extends LitElement {
+  static styles = css`
+    :host cds-modal-body {
+      padding-bottom: 0;
+    }
+
+    .notification {
+      position: absolute;
+      right: 10px;
+      top: 10px;
+    }
+  `;
+
+  @property()
+  resourceName?: string;
+
+  @property({ reflect: true })
+  isOpen: boolean = false;
+
+  @state()
+  private _showNotification: boolean = false;
+
+  private _close() {
+    this.isOpen = false;
+  }
+
+  private _onDelete(e: Event) {
+    this._close();
+    this._showNotification = true;
+  }
+
+  private onNotificationClose() {
+    this._showNotification = false;
+  }
+
+  render() {
+    return html`
+      <cds-modal size="sm" ?open="${this.isOpen}" prevent-close >
+        <cds-modal-header>
+          <cds-modal-close-button  @click="${this._close}" ></cds-modal-close-button>
+          <cds-modal-label>Delete ${this.resourceName} project</cds-modal-label>
+          <cds-modal-heading>Confirm delete</cds-modal-heading>
+        </cds-modal-header>
+        <cds-modal-body>
+          <cds-modal-body-content description>
+          Deleting '${this.resourceName}' project will permanently delete the project and all related configurations from the system.
+          This action cannot be undone.
+          </cds-modal-body-content>
+        </cds-modal-body>
+        <cds-modal-footer>
+          <cds-modal-footer-button kind="secondary" @click="${this._close}"
+            >Cancel</cds-modal-footer-button
+          >
+          <cds-modal-footer-button kind="danger"  @click="${this._onDelete}"> Delete </cds-modal-footer-button>
+        </cds-modal-footer>
+      </cds-modal>
+
+      ${
+        this._showNotification
+          ? html`<cds-toast-notification
+              class="notification"
+              kind="success"
+              title="Successfully deleted project"
+              subtitle="${this.resourceName} project has been deleted"
+              caption="10:10:00 AM"
+              hide-close-button="true"
+              low-contrast="true"
+              timeout="3000"
+              @cds-notification-closed="${this.onNotificationClose}"
+            ></cds-toast-notification>`
+          : null
+      }
+      </cds-toast-notification>
+    `;
+  }
+}
+```
+
+## Low impact deletion or removal
+
+Requiring the user to confirm deletion is generally recommended. However, in low
+impact situations, or when an ‘undo’ option is available, user confirmation may
+not be required.
+
+> NOTE: The low-impact removal pattern is similar to low-impact deletion
+> pattern, with the only difference being the usage of “remove” or “delete“ in
+> the text. Use “remove” when the action is reversible or not truly destructive.
+
+### Example
+
+Here's a quick example to get you started.
+
+All of the carbon web components listed under 'ingredients' section are used
+within a wrapper component `delete-pattern` to handle state management required
+for the functionality.
+
+#### TS
+
+```typescript
+import { html, css, LitElement } from 'lit';
+import { customElement, property, state } from 'lit/decorators.js';
+
+import '@carbon/web-components/es/components/button/button.js';
+import '@carbon/web-components/es/components/notification/toast-notification.js';
+
+@customElement('delete-pattern')
+export class DeletePattern extends LitElement {
+  static styles = css`
+    .notification {
+      position: absolute;
+      right: 10px;
+      top: 10px;
+    }
+  `;
+
+  @property()
+  resourceName?: string;
+
+  @state()
+  private _showNotification: boolean = false;
+
+  private _onDelete(e: Event) {
+    this._showNotification = true;
+  }
+
+  private onNotificationClose() {
+    this._showNotification = false;
+  }
+
+  render() {
+    return html`
+     <div>
+        <cds-button kind="danger"  @click="${this._onDelete}"> Delete ${this.resourceName} project </cds-button>
+        ${
+          this._showNotification
+            ? html`<cds-toast-notification
+                class="notification"
+                kind="success"
+                title="Successfully deleted project"
+                subtitle="${this.resourceName} project has been deleted"
+                caption="10:10:00 AM"
+                hide-close-button="true"
+                low-contrast="true"
+                timeout="3000"
+                @cds-notification-closed="${this.onNotificationClose}"
+              ></cds-toast-notification>`
+            : null
+        }
+        </cds-toast-notification>
+    </div>
+    `;
+  }
+}
+```
