fix: add internal extension to internal stories

--- a/packages/ibm-products/src/components/DecoratorBase/DecoratorBase.mdx
+++ b/packages/ibm-products/src/components/DecoratorBase/DecoratorBase.mdx
@@ -1,7 +1,7 @@
 import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { DecoratorBase } from '.';
-import * as DecoratorBaseStories from './DecoratorBase.stories';
+import * as DecoratorBaseStories from './DecoratorBase.internal.stories';
 
 # DecoratorBase
 
