--- a/packages/ibm-products/src/components/ButtonMenu/ButtonMenu.mdx
+++ b/packages/ibm-products/src/components/ButtonMenu/ButtonMenu.mdx
@@ -1,6 +1,6 @@
 import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { ButtonMenu } from '.';
-import * as ButtonMenuStories from './ButtonMenu.stories';
+import * as ButtonMenuStories from './ButtonMenu.internal.stories';
 
 # ButtonMenu
 
