--- a/packages/ibm-products/src/components/FilterPanel/FilterPanelLabel/FilterPanelLabel.mdx
+++ b/packages/ibm-products/src/components/FilterPanel/FilterPanelLabel/FilterPanelLabel.mdx
@@ -1,7 +1,7 @@
 import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../../global/js/utils/story-helper';
 import { FilterPanelLabel } from '.';
-import * as FilterPanelLabelStories from './FilterPanelLabel.stories';
+import * as FilterPanelLabelStories from './FilterPanelLabel.internal.stories';
 
 # FilterPanelLabel
 
