--- a/packages/ibm-products-web-components/src/patterns/delete/delete.mdx
+++ b/packages/ibm-products-web-components/src/patterns/delete/delete.mdx
@@ -56,117 +56,87 @@ All of the carbon web components listed under 'ingredients' section are used
 within a wrapper component `delete-pattern` to handle state management required
 for the functionality.
 
-#### TS
+#### JS (via import)
 
-```typescript
-import { html, css, LitElement } from 'lit';
-import { customElement, property, state } from 'lit/decorators.js';
-
+```javascript
 import '@carbon/web-components/es/components/modal/index.js';
 import '@carbon/web-components/es/components/form/form-item.js';
 import '@carbon/web-components/es/components/text-input/text-input.js';
 import '@carbon/web-components/es/components/notification/toast-notification.js';
-
-@customElement('delete-pattern')
-export class DeletePattern extends LitElement {
-  static styles = css`
-    :host cds-modal-body {
-      padding-bottom: 0;
-    }
-
-    .notification {
-      position: absolute;
-      right: 10px;
-      top: 10px;
-    }
-  `;
-
-  @property()
-  resourceName?: string;
-
-  @property({ reflect: true })
-  isOpen: boolean = false;
-
-  @state()
-  private _textInput: string = '';
-
-  @state()
-  private _enableDelete: boolean = false;
-
-  @state()
-  private _showNotification: boolean = false;
-
-  private _close() {
-    this.isOpen = false;
-    this._textInput = '';
-  }
-
-  private _onInputChange(e: Event) {
-    this._textInput = (e.target as HTMLInputElement).value;
-    this._enableDelete = this.resourceName === this._textInput;
-  }
-
-  private _onDelete(e: Event) {
-    this._close();
-    this._showNotification = true;
-  }
-
-  private onNotificationClose() {
-    this._showNotification = false;
-  }
-
-  render() {
-    return html`
-      <cds-modal size="sm" ?open="${this.isOpen}" prevent-close >
-        <cds-modal-header>
-          <cds-modal-close-button  @click="${this._close}" ></cds-modal-close-button>
-          <cds-modal-label>Delete ${this.resourceName} project</cds-modal-label>
-          <cds-modal-heading>Confirm delete</cds-modal-heading>
-        </cds-modal-header>
-        <cds-modal-body>
-          <cds-modal-body-content description>
-          Deleting '${this.resourceName}' project will permanently delete the project and all related configurations from the system.
-          This action cannot be undone.
-          </cds-modal-body-content>
-          <cds-form-item>
-            <cds-text-input
-              placeholder="Name of resource"
-              label="Type ${this.resourceName} to confirm"
-              value="${this._textInput}"
-              @input="${this._onInputChange}"
-              autocomplete="off"
-            >
-            </cds-text-input>
-          </cds-form-item>
-        </cds-modal-body>
-        <cds-modal-footer>
-          <cds-modal-footer-button kind="secondary" @click="${this._close}"
-            >Cancel</cds-modal-footer-button
-          >
-          <cds-modal-footer-button ?disabled="${!this._enableDelete}" kind="danger"  @click="${this._onDelete}"> Delete </cds-modal-footer-button>
-        </cds-modal-footer>
-      </cds-modal>
-
-      ${
-        this._showNotification
-          ? html`<cds-toast-notification
-              class="notification"
-              kind="success"
-              title="Successfully deleted project"
-              subtitle="${this.resourceName} project has been deleted"
-              caption="10:10:00 AM"
-              hide-close-button="true"
-              low-contrast="true"
-              timeout="3000"
-              @cds-notification-closed="${this.onNotificationClose}"
-            ></cds-toast-notification>`
-          : null
-      }
-      </cds-toast-notification>
-    `;
-  }
-}
+import '@carbon/web-components/es/components/checkbox/checkbox.js';
+import '@carbon/web-components/es/components/link/link.js';
 ```
+
+#### HTML
+
+```html
+<cds-modal size="sm" ?open="${this.isOpen}" prevent-close>
+  <cds-modal-header>
+    <cds-modal-close-button @click="${this._close}"></cds-modal-close-button>
+    <cds-modal-label>Delete project</cds-modal-label>
+    <cds-modal-heading>Confirm delete</cds-modal-heading>
+  </cds-modal-header>
+  <cds-modal-body>
+    <cds-modal-body-content description>
+      Deleting project will permanently delete the project and all related
+      configurations from the system. This action cannot be undone.
+    </cds-modal-body-content>
+    <cds-form-item>
+      <cds-text-input
+        placeholder="Name of resource"
+        label="Type ${this.resourceName} to confirm"
+        value="${this._textInput}"
+        @input="${this._onInputChange}"
+        autocomplete="off"
+      >
+      </cds-text-input>
+    </cds-form-item>
+  </cds-modal-body>
+  <cds-modal-footer>
+    <cds-modal-footer-button kind="secondary" @click="${this._close}"
+      >Cancel</cds-modal-footer-button
+    >
+    <cds-modal-footer-button
+      ?disabled="${!this._enableDelete}"
+      kind="danger"
+      @click="${this._onDelete}"
+    >
+      Delete
+    </cds-modal-footer-button>
+  </cds-modal-footer>
+</cds-modal>
+
+<cds-toast-notification
+  class="notification"
+  kind="success"
+  title="Successfully deleted project"
+  subtitle="${this.resourceName} project has been deleted"
+  caption="10:10:00 AM"
+  hide-close-button="true"
+  low-contrast="true"
+  timeout="3000"
+  @cds-notification-closed="${this.onNotificationClose}"
+></cds-toast-notification>
+```
+
+### High impact deletion with connected items
+
+It is similar to high-impact deletion pattern, but the confirmation dialog will
+display the below 2 additional content:
+
+- list of all the connected items
+- checkbox to confirm the deletion the all its connected items.
+
+### High impact batch deletion
+
+In batch deletion, a confirmation dialog should be presented to the user which
+displays:
+
+- The names of the items selected
+- The consequences of the deletion
+- The phrase, “This action cannot be undone”
+- A checkbox to confirm the deletion of the selected resources
+- A note of items that cannot be deleted in batch selection (optional)
 
 ## Medium impact deletion or removal
 
@@ -190,92 +160,41 @@ All of the carbon web components listed under 'ingredients' section are used
 within a wrapper component `delete-pattern` to handle state management required
 for the functionality.
 
-#### TS
+#### HTML
 
-```typescript
-import { html, css, LitElement } from 'lit';
-import { customElement, property, state } from 'lit/decorators.js';
-
-import '@carbon/web-components/es/components/modal/index.js';
-import '@carbon/web-components/es/components/notification/toast-notification.js';
-
-@customElement('delete-pattern')
-export class DeletePattern extends LitElement {
-  static styles = css`
-    :host cds-modal-body {
-      padding-bottom: 0;
-    }
-
-    .notification {
-      position: absolute;
-      right: 10px;
-      top: 10px;
-    }
-  `;
-
-  @property()
-  resourceName?: string;
-
-  @property({ reflect: true })
-  isOpen: boolean = false;
-
-  @state()
-  private _showNotification: boolean = false;
-
-  private _close() {
-    this.isOpen = false;
-  }
-
-  private _onDelete(e: Event) {
-    this._close();
-    this._showNotification = true;
-  }
-
-  private onNotificationClose() {
-    this._showNotification = false;
-  }
-
-  render() {
-    return html`
-      <cds-modal size="sm" ?open="${this.isOpen}" prevent-close >
-        <cds-modal-header>
-          <cds-modal-close-button  @click="${this._close}" ></cds-modal-close-button>
-          <cds-modal-label>Delete ${this.resourceName} project</cds-modal-label>
-          <cds-modal-heading>Confirm delete</cds-modal-heading>
-        </cds-modal-header>
-        <cds-modal-body>
-          <cds-modal-body-content description>
-          Deleting '${this.resourceName}' project will permanently delete the project and all related configurations from the system.
-          This action cannot be undone.
-          </cds-modal-body-content>
-        </cds-modal-body>
-        <cds-modal-footer>
-          <cds-modal-footer-button kind="secondary" @click="${this._close}"
-            >Cancel</cds-modal-footer-button
-          >
-          <cds-modal-footer-button kind="danger"  @click="${this._onDelete}"> Delete </cds-modal-footer-button>
-        </cds-modal-footer>
-      </cds-modal>
-
-      ${
-        this._showNotification
-          ? html`<cds-toast-notification
-              class="notification"
-              kind="success"
-              title="Successfully deleted project"
-              subtitle="${this.resourceName} project has been deleted"
-              caption="10:10:00 AM"
-              hide-close-button="true"
-              low-contrast="true"
-              timeout="3000"
-              @cds-notification-closed="${this.onNotificationClose}"
-            ></cds-toast-notification>`
-          : null
-      }
-      </cds-toast-notification>
-    `;
-  }
-}
+```html
+<cds-modal size="sm" ?open="${this.isOpen}" prevent-close>
+  <cds-modal-header>
+    <cds-modal-close-button @click="${this._close}"></cds-modal-close-button>
+    <cds-modal-label>Delete project</cds-modal-label>
+    <cds-modal-heading>Confirm delete</cds-modal-heading>
+  </cds-modal-header>
+  <cds-modal-body>
+    <cds-modal-body-content description>
+      Deleting project will permanently delete the project and all related
+      configurations from the system. This action cannot be undone.
+    </cds-modal-body-content>
+  </cds-modal-body>
+  <cds-modal-footer>
+    <cds-modal-footer-button kind="secondary" @click="${this._close}"
+      >Cancel</cds-modal-footer-button
+    >
+    <cds-modal-footer-button kind="danger" @click="${this._onDelete}">
+      Delete
+    </cds-modal-footer-button>
+  </cds-modal-footer>
+</cds-modal>
+<cds-toast-notification
+  class="notification"
+  kind="success"
+  title="Successfully deleted project"
+  subtitle="${this.resourceName} project has been deleted"
+  caption="10:10:00 AM"
+  hide-close-button="true"
+  low-contrast="true"
+  timeout="3000"
+  @cds-notification-closed="${this.onNotificationClose}"
+></cds-toast-notification>
 ```
 
 ## Low impact deletion or removal
@@ -296,61 +215,19 @@ All of the carbon web components listed under 'ingredients' section are used
 within a wrapper component `delete-pattern` to handle state management required
 for the functionality.
 
-#### TS
+#### HTML
 
-```typescript
-import { html, css, LitElement } from 'lit';
-import { customElement, property, state } from 'lit/decorators.js';
-
-import '@carbon/web-components/es/components/button/button.js';
-import '@carbon/web-components/es/components/notification/toast-notification.js';
-
-@customElement('delete-pattern')
-export class DeletePattern extends LitElement {
-  static styles = css`
-    .notification {
-      position: absolute;
-      right: 10px;
-      top: 10px;
-    }
-  `;
-
-  @property()
-  resourceName?: string;
-
-  @state()
-  private _showNotification: boolean = false;
-
-  private _onDelete(e: Event) {
-    this._showNotification = true;
-  }
-
-  private onNotificationClose() {
-    this._showNotification = false;
-  }
-
-  render() {
-    return html`
-     <div>
-        <cds-button kind="danger"  @click="${this._onDelete}"> Delete ${this.resourceName} project </cds-button>
-        ${
-          this._showNotification
-            ? html`<cds-toast-notification
-                class="notification"
-                kind="success"
-                title="Successfully deleted project"
-                subtitle="${this.resourceName} project has been deleted"
-                caption="10:10:00 AM"
-                hide-close-button="true"
-                low-contrast="true"
-                timeout="3000"
-                @cds-notification-closed="${this.onNotificationClose}"
-              ></cds-toast-notification>`
-            : null
-        }
-        </cds-toast-notification>
-    </div>
-    `;
-  }
-}
+```html
+<cds-button kind="danger" @click="${this._onDelete}"> Delete </cds-button>
+<cds-toast-notification
+  class="notification"
+  kind="success"
+  title="Successfully deleted project"
+  subtitle="${this.resourceName} project has been deleted"
+  caption="10:10:00 AM"
+  hide-close-button="true"
+  low-contrast="true"
+  timeout="3000"
+  @cds-notification-closed="${this.onNotificationClose}"
+></cds-toast-notification>
 ```
