--- a/packages/ibm-products-web-components/src/patterns/delete-and-remove/delete-and-remove.mdx
+++ b/packages/ibm-products-web-components/src/patterns/delete-and-remove/delete-and-remove.mdx
@@ -1,7 +1,7 @@
 import { Markdown, Meta, Story } from '@storybook/blocks';
 
 import { cdnJs, cdnCss } from '../../globals/internal/storybook-cdn';
-import * as DeleteStories from './delete.stories';
+import * as DeleteStories from './delete-and-remove.stories';
 
 <Meta of={DeleteStories} />
 
