feat(Modals): add storybook styles to stackblitz

--- a/packages/ibm-products/src/components/APIKeyModal/APIKeyModal.mdx
+++ b/packages/ibm-products/src/components/APIKeyModal/APIKeyModal.mdx
@@ -29,7 +29,7 @@ export const customImportsArr = [
   additionalActions={[
       {
         title: 'Open in Stackblitz',
-        onClick: () => stackblitzPrefillConfig(stories.Generate,[],customFunctionArr),
+        onClick: () => stackblitzPrefillConfig(stories.Generate,[],customFunctionArr, stories.default.parameters.styles),
       },
     ]}>
 </Canvas>
@@ -41,7 +41,7 @@ export const customImportsArr = [
   additionalActions={[
       {
         title: 'Open in Stackblitz',
-        onClick: () => stackblitzPrefillConfig(stories.GenerateWithError,[],customFunctionArr),
+        onClick: () => stackblitzPrefillConfig(stories.GenerateWithError,[],customFunctionArr, stories.default.parameters.styles),
       },
     ]}>
 </Canvas>
@@ -53,7 +53,7 @@ export const customImportsArr = [
   additionalActions={[
       {
         title: 'Open in Stackblitz',
-        onClick: () => stackblitzPrefillConfig(stories.InstantGenerate,customImportsArr,customFunctionArr),
+        onClick: () => stackblitzPrefillConfig(stories.InstantGenerate,customImportsArr,customFunctionArr, stories.default.parameters.styles),
       },
     ]}>
 </Canvas>
@@ -65,7 +65,7 @@ export const customImportsArr = [
   additionalActions={[
       {
         title: 'Open in Stackblitz',
-        onClick: () => stackblitzPrefillConfig(stories.CustomGenerate,[],customFunctionArr),
+        onClick: () => stackblitzPrefillConfig(stories.CustomGenerate,[],customFunctionArr, stories.default.parameters.styles),
       },
     ]}>
 </Canvas>
@@ -77,7 +77,7 @@ export const customImportsArr = [
   additionalActions={[
       {
         title: 'Open in Stackblitz',
-        onClick: () => stackblitzPrefillConfig(stories.Edit,[],customFunctionArr),
+        onClick: () => stackblitzPrefillConfig(stories.Edit,[],customFunctionArr, stories.default.parameters.styles),
       },
     ]}>
 </Canvas>
@@ -89,7 +89,7 @@ export const customImportsArr = [
   additionalActions={[
       {
         title: 'Open in Stackblitz',
-        onClick: () => stackblitzPrefillConfig(stories.EditWithError,[],customFunctionArr),
+        onClick: () => stackblitzPrefillConfig(stories.EditWithError,[],customFunctionArr, stories.default.parameters.styles),
       },
     ]}>
 </Canvas>
@@ -101,7 +101,7 @@ export const customImportsArr = [
   additionalActions={[
       {
         title: 'Open in Stackblitz',
-        onClick: () => stackblitzPrefillConfig(stories.CustomEdit,[],customFunctionArr),
+        onClick: () => stackblitzPrefillConfig(stories.CustomEdit,[],customFunctionArr, stories.default.parameters.styles),
       },
     ]}>
 </Canvas>
