--- a/packages/ibm-products/src/components/OptionsTile/OptionsTile.mdx
+++ b/packages/ibm-products/src/components/OptionsTile/OptionsTile.mdx
@@ -31,7 +31,7 @@ set of features with ease.
   additionalActions={[
       {
         title: 'Open in Stackblitz',
-        onClick: () => stackblitzPrefillConfig(stories.optionsTile),
+        onClick: () => stackblitzPrefillConfig(stories.optionsTile, [], [], stories.default.parameters.styles),
       },
     ]}>
 </Canvas>
@@ -43,7 +43,7 @@ set of features with ease.
   additionalActions={[
       {
         title: 'Open in Stackblitz',
-        onClick: () => stackblitzPrefillConfig(stories.staticOptionsTile),
+        onClick: () => stackblitzPrefillConfig(stories.staticOptionsTile, [], [], stories.default.parameters.styles),
       },
     ]}>
 </Canvas>
